feat:完善消息模块表结构
